# thicc

./: .gitignore  Cargo.toml  Dockerfile  get_langs.py
src/: constants.rs  create_template.rs  db.rs  main.rs  paste.rs  paste_template.rs  server.rs
templates/: create.html  paste.html
