[package]
name = "thicc"
version = "0.1.0"
authors = ["Luca Marcelli"]
edition = "2018"

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sqlite = "*"
rand = "*"
askama = "*"
base64 = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]